Updates from Overleaf

--- a/PSI 3rd trial/main.tex
+++ b/PSI 3rd trial/main.tex
@@ -104,7 +104,8 @@ Our web-based platform offers a number of cognitive games that are designed to t
 
 \subsection{Planned implementation}
 Primary of the system correlates with the integration of difficulty options into our gaming platform. The variety of customized difficulties will now be offered for each game. Allowing the user to choose their challenge level based on their preference. The UI will include a button with text on the game's start page referring to the selected difficulty. 
-Secondary change is hashing user's private data. At the moment, user's passwords are stored in plain text. This is a profound security risk. User's passwords would get exposed in case of an unauthorized breakage into the database. Implementation of modern, robust hashing algorithms would significantly improve user base trust, and security by reducing the risk of password theft. 
+Secondary change is hashing user's private data. At the moment, user's passwords are stored in plain text. This is a profound security risk. User's passwords would get exposed in case of an unauthorized breakage into the database. During new account creation user password would need to be hashed before being saved into the database.
+
 
 \subsection{Financial analysis}
 Financial analysis is a crucial process in all businesses when pivotal changes are being planned or considered. Giving thought to the planned implementation of our change, it is important that financial resources are considered. This part of our impact analysis overviews the duration of the planned implementation, team status and composition. Since the team is implementing the planned changes, they are not only responsible for the effective implementation, but also determining their hourly pay and the whole price for their service. This part of the analysis is useful for multiple aspects, such as determining the approximate price of the change, providing trust for shareholders, because they then have estimates from which to decide what decisions to make. Lastly, financial analysis helps investors evaluate the financial possibilities of the system and are the solutions based properly.
@@ -133,13 +134,21 @@ Financial analysis is a crucial process in all businesses when pivotal changes a
     kaip ir done????
 \end{comment}
 
-\subsection{Technological analysis}
-
+\subsection{Technical analysis}
+\subsubsection{Change requirements}
+\subsubsection{Technical solution}
 
 \subsection{Impact evaluation - positive aspect (User)}
 Letting users choose a difficulty based on their own needs leads to a more engaging user experience while using the platform. Users have different cognitive skill sets, so it would be in our interest to tinker a better experience for a variety of users. Easier game difficulty would help by not scare away newcomers, because at first the game's complexity and hardness could be intimidating. Less hard games would also help by building user's confidence and enjoyment. In contrast, for users that find easier modes less intriguing, harder difficulty would provide a better challenge and retain the user's attention to the platform.
+Implementation of modern, robust hashing algorithms would significantly improve user base trust, and security by reducing the risk of password theft. For bad actors, it would be impossible to reverse the hashed password into the original one. This change makes the platform more appealing to users that are more concerned with their privacy.
+
+\subsection{Impact evaluation - negative aspect (User)}
+The implementation of difficulty is not standardized across all games, this could lead to situation where a user could feel that a "Normal" in one game is not equivalent to a "normal" in another game. This can lead to frustrations and users questioning the 
+
 
 \subsection{Risk and solution possibility analysis}
+
+
 
 \subsection{Planned implementation work plan}
 
