--- a/PSI 3rd trial/main.tex
+++ b/PSI 3rd trial/main.tex
@@ -136,7 +136,14 @@ Financial analysis is a crucial process in all businesses when pivotal changes a
 
 \subsection{Technical analysis}
 \subsubsection{Change requirements}
-Based on the planned implementation, the following
+Based on the planned implementation, the following technical requirements were identified:
+
+\begin{enumerate}
+    \item  \textbf{Difficulty Option Implementation:}
+    \begin{itemize}
+        
+    \end{itemize}
+\end{enumerate}
 \subsubsection{Technical solution}
 
 \subsection{Impact evaluation - positive aspect (User)}
@@ -144,7 +151,7 @@ Letting users choose a difficulty based on their own needs leads to a more engag
 Implementation of modern, robust hashing algorithms would significantly improve user base trust, and security by reducing the risk of password theft. For bad actors, it would be impossible to reverse the hashed password into the original one. This change makes the platform more appealing to users that are more concerned with their privacy.
 
 \subsection{Impact evaluation - negative aspect (User)}
-It is tough, standardized difficulty across all games. This could lead to a situation where a user could feel that a "Normal" in one game is not equivalent to a "normal" in another game. From user's perspective this can lead to frustrations and getting discouraged at the system.
+One problem with difficulty modes is that it is tough to standardized it across all games. This could lead to a situation where a user could feel like that a "Normal" in one game is not equivalent to a "normal" in another game. From user's perspective this can lead to frustrations and getting discouraged at the system.
 
 
 \subsection{Risk and solution possibility analysis}
