Updates from Overleaf

--- a/PSI 3rd trial/main.tex
+++ b/PSI 3rd trial/main.tex
@@ -141,7 +141,8 @@ Based on the planned implementation, the following technical requirements were i
 \begin{enumerate}
     \item  \textbf{Difficulty Option Implementation:}
     \begin{itemize}
-        \item A 
+        \item UI element (button) on every game start page to allow users to select their desired difficulty
+        \item
     \end{itemize}
 \end{enumerate}
 \subsubsection{Technical solution}
