--- a/PSI_2nd_trial/main_2nd_trial.tex
+++ b/PSI_2nd_trial/main_2nd_trial.tex
@@ -248,15 +248,7 @@ ensuring the game session concludes when the allotted time is exhausted.
     \end{minipage}
 \end{figure}
 
-Figure~\ref{fig:sudoku_state} (The \textit{Sudoku} state diagram) captures
-the interactive elements of playing our \textit{Sudoku} game. Initially, the board
-is idle, waiting for user interaction. When a cell is selected, the state
-changes, allowing the user to either deselect the cell, select another
-cell, input a value, or submit the board for validation. Upon submission,
-the system checks the board (by an asynchronous call to our API): if the
-board is invalid, it redraws and returns to the idle state; if the board
-is valid, the game ends. These states capture the essential user interactions
-and decision points necessary for the logic puzzle.
+Figure~\ref{fig:sudoku_state} (The \textit{Sudoku} state diagram) shows the different states and transitions of the SudokuPage component. The game begins in the Idle state and. User action can then trigger two different transitions: \textit{select cell} and \textit{submit}. The CellSelected state represents the state where one of the sudoku cells were selected by the user, the user can then trigger transitions by either selecting another cell, deselecting a cell completely, entering a value (number) inside the cell or submiting the current board for validation. The ValidatingBoard state represents the state in which the SudokuPage is communicating asynchronously with the back-end API in order to check if the submitted solution is valid. If the submission was invalid the component transitions back to the idle state, otherwise the game ends.
 
 The \textit{Pair Up} diagram (Figure~\ref{fig:pair_up_state}) details the
 states of our memory-based matching game. The game starts with all cards being
@@ -312,10 +304,10 @@ The arrows indicate dependencies and illustrate how functionality is physically 
     \label{fig:server_component_diagram}
 \end{figure}
 
-Figure~\ref{fig:server_component_diagram} illustrates the architecture of components from the Server package. Controllers provide API endpoints for frontend services, with each controller communicating with its corresponding service layer through well-defined interfaces. Services encapsulate the core business logic including game mechanics, user tracking, and account management. These services interact with other necessary services or repositories as needed. Data access is handled through repositories that abstract database operations.
+Figure~\ref{fig:server_component_diagram} illustrates various components which make up the server package. Controllers provide API endpoints to the corresponding services using interfaces as a mediator. These services then implement the needed server functions, such as game mechanics, user score tracking and account management, sometimes using other necessary services or repositories as needed. User and score data access is handled through repositories that abstract database operations.
 
 
-The following outlines the mapping between components from a server component diagram and corresponding classes in a class diagram, organized by their respective subsystems or folders:
+The following package folder list helps us identify which class diagram components correspond to the components in figure~\ref{fig:server_component_diagram}:
 \begin{enumerate}[label=\textbf{\arabic*.}, ref=\arabic*]
     \item \textbf{Services}
         \begin{enumerate}[label=\textbf{\alph*.}, ref=\theenumi.\alph*]
@@ -323,49 +315,49 @@ The following outlines the mapping between components from a server component di
                 \begin{itemize}
                     \item \textbf{Component:} \texttt{UserTrackingService}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{UserTrackingService}
+                            \item \textbf{Corresponding Class:} \texttt{UserTrackingService}
                         \end{itemize}
                     \item \textbf{Component:} \texttt{UserService}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{UserServices}
+                            \item \textbf{Corresponding Class:} \texttt{UserServices}
                         \end{itemize}
                     \item \textbf{Component:} \texttt{AccountScoreService}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{accountScoreService}
+                            \item \textbf{Corresponding Class:} \texttt{accountScoreService}
                         \end{itemize}
                 \end{itemize}
             \item \textbf{Game Services Subsystem}
                 \begin{itemize}
                     \item \textbf{Component:} \texttt{AimTrainerService}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{AimTrainerService}
+                            \item \textbf{Corresponding Class:} \texttt{AimTrainerService}
                         \end{itemize}
                     \item \textbf{Component:} \texttt{SudokuService}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{SudokuService}
+                            \item \textbf{Corresponding Class:} \texttt{SudokuService}
                         \end{itemize}
                     \item \textbf{Component:} \texttt{PairUpService}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{PairUpService}
+                            \item \textbf{Corresponding Class:} \texttt{PairUpService}
                         \end{itemize}
                 \end{itemize}
             \item \textbf{Math Game Services Subsystem}
                 \begin{itemize}
                     \item \textbf{Component:} \texttt{MathGameServices}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{MathGameService}
+                            \item \textbf{Corresponding Class:} \texttt{MathGameService}
                         \end{itemize}
                     \item \textbf{Component:} \texttt{MathGenerationService}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} (Not in Class Diagram)
+                            \item \textbf{Corresponding Class:} (Not in Class Diagram)
                         \end{itemize}
                     \item \textbf{Component:} \texttt{MathCalculationService}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} (Not in Class Diagram)
+                            \item \textbf{Corresponding Class:} (Not in Class Diagram)
                         \end{itemize}
                     \item \textbf{Component:} \texttt{MathGameScoreboardService}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} (Not in Class Diagram)
+                            \item \textbf{Corresponding Class:} (Not in Class Diagram)
                         \end{itemize}
                 \end{itemize}
         \end{enumerate}
@@ -375,30 +367,30 @@ The following outlines the mapping between components from a server component di
                 \begin{itemize}
                     \item \textbf{Component:} \texttt{UserController}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{UserController}
+                            \item \textbf{Corresponding Class:} \texttt{UserController}
                         \end{itemize}
                     \item \textbf{Component:} \texttt{AccountScoreController}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{AccountScoreController}
+                            \item \textbf{Corresponding Class:} \texttt{AccountScoreController}
                         \end{itemize}
                 \end{itemize}
             \item \textbf{Game Controllers Subsystem}
                 \begin{itemize}
                     \item \textbf{Component:} \texttt{AimTrainerController}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{AimTrainerController}
+                            \item \textbf{Corresponding Class:} \texttt{AimTrainerController}
                         \end{itemize}
                     \item \textbf{Component:} \texttt{SudokuController}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{SudokuController}
+                            \item \textbf{Corresponding Class:} \texttt{SudokuController}
                         \end{itemize}
                     \item \textbf{Component:} \texttt{PairUpController}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{PairUpController}
+                            \item \textbf{Corresponding Class:} \texttt{PairUpController}
                         \end{itemize}
                     \item \textbf{Component:} \texttt{MathGameController}
                         \begin{itemize}
-                            \item \textbf{Equivalent Class:} \texttt{MathGameController}
+                            \item \textbf{Corresponding Class:} \texttt{MathGameController}
                         \end{itemize}
                 \end{itemize}
         \end{enumerate}
@@ -406,18 +398,18 @@ The following outlines the mapping between components from a server component di
         \begin{itemize}
             \item \textbf{Component:} \texttt{User Repository}
                 \begin{itemize}
-                    \item \textbf{Equivalent Class:} \texttt{UserRepository}
+                    \item \textbf{Corresponding Class:} \texttt{UserRepository}
                 \end{itemize}
             \item \textbf{Component:} \texttt{Score Repository}
                 \begin{itemize}
-                    \item \textbf{Equivalent Class:} \texttt{ScoreRepository}
+                    \item \textbf{Corresponding Class:} \texttt{ScoreRepository}
                 \end{itemize}
         \end{itemize}
     \item \textbf{Database Folder}
         \begin{itemize}
             \item \textbf{Component:} \texttt{UserDbContext}
                 \begin{itemize}
-                    \item \textbf{Equivalent Class:} (Not in Class Diagram)
+                    \item \textbf{Corresponding Class:} (Not in Class Diagram)
                 \end{itemize}
         \end{itemize}
 \end{enumerate}
@@ -647,16 +639,7 @@ cloud infrastructure for back-end processing and storage of user and game data.
         \caption{CI Pipeline}
         \label{fig:CI_pipeline}
 \end{figure}
-Figure~\ref{fig:CI_pipeline} focuses on our pull request (PR) validation
-workflow. Triggered by any pull request targeting the main branch, this
-pipeline starts by setting up a linux environment (latest Ubuntu) and
-executing a series of steps: checking out the code, setting up the .NET
-environment, restoring dependencies, building the solution, and running
-tests. The critical decision point here assesses whether all tests pass. If
-they do, the PR status is marked as passing, signaling readiness for review
-and potential merge. If any tests fail, the pipeline marks the PR as failing
-and prevents it from being merged, thus upholding code quality and integrity
-before changes are integrated into the main branch.
+Figure~\ref{fig:CI_pipeline} shows our current continuous integration pipeline that was set up using GitHub Actions. The pipeline is triggered when a pull request is made for the main branch. Firstly a runner is found that checks out the code and sets up the required environment. The project dependencies are then restored and the app is built. The tests are then run automatically. Based on the results of the tests, the pull request either gets marked as failing and is blocked from being merged into the main branch, or the PR gets marked as passing, giving a green light to merge after code review.
 
 \begin{figure}[H]
     \centering
@@ -664,18 +647,7 @@ before changes are integrated into the main branch.
     \caption{CD Pipeline}
     \label{fig:CD_pipeline}
 \end{figure}
-Figure~\ref{fig:CD_pipeline} illustrates our CD pipeline using GitHub
-Actions. The whole process is excecuted on a linux(latest Ubuntu)
-environment. The process begins when a push to the main branch or a manual
-trigger starts the pipeline. Within the "Build and Test Job" partition,
-the pipeline checks out the repository, sets up the .NET environment,
-restores dependencies, and builds the application. After running tests,
-the workflow evaluates the outcome: if the tests succeed, it proceeds to
-publish the application and upload the resulting artifact; if any test fails,
-the deployment is aborted immediately. Following a successful build and test
-phase, the "Deploy Job" partition retrieves the artifact from the previous
-step and deploys it to Azure, ensuring that only verified code is promoted
-to production.
+Our continuous deployment pipeline (Fig.~\ref{fig:CD_pipeline}) is also set up using GitHub Actions. It is triggered when a push/change happens on the main branch of the project. The pipeline is made up of two parts: the build and test job and the deployment job. At first, the code is checked out, the environment is set up, the project dependencies are restored, and the app is built. If the tests fail, deployment is aborted entirely; if they pass, the deployment job is started. This job handles downloading the built application from the previous job and uses Azure's deployment action to upload the artifacts to the Azure servers.
 
 \section{Use Case View}
 
@@ -696,13 +668,9 @@ to production.
     \end{minipage}
 \end{figure}
 
-Figure~\ref{fig:use_case_account} shows how players interact with the Account module.
-Unauthenticated players can log in or sign up, while authenticated players can log out.
+Figure~\ref{fig:use_case_account} shows how both unauthenticated and authenticated players can use the account module. An already authenticated player can use it to log out, a unauthenticated player can use it to log in (authenticate) or to sign up if he wants to create a new account.
 
-Figure~\ref{fig:use_case_game_page} outlines two key actions: starting a game and
-changing the difficulty level. This design ensures that players have direct
-control over initiating gameplay and tailoring the challenge to their
-preferences.
+Figure~\ref{fig:use_case_game_page} contains the use cases for our Game Page components. A player can interact with the component to either start the game or to change the difficulty of the game before playing.
 
 \begin{figure}[H]
     \centering
@@ -720,15 +688,9 @@ preferences.
     \end{minipage}
 \end{figure}
 
-Figure~\ref{fig:use_case_high_score} details various ways for authenticated players to review game performance. Users
-can view short game statistics, detailed graphs, timelines of past games, and
-statistics filtered by difficulty. The module provides multiple perspectives to
-help players track and analyze their performance.
+Figure~\ref{fig:use_case_high_score} shows how authenticated players can use the high score module. Authenticated players can view the shortened version of their game statistics, view a visual graph of their game statistics, see a timeline of the games they've played or view their statistics filtered by game difficulty.
 
-Figure~\ref{fig:use_case_navigation} maps out the main paths for navigating through the website.
-Players can easily switch between the home page (which doubles as the game
-selection page), the account page, and the statistics page, ensuring a
-user-friendly and integrated browsing experience.
+Figure~\ref{fig:use_case_navigation} outlines how players use the navigation components to navigate throughout the app. They can choose to go to the home page, which doubles as the game selection page, go to the account page, go to the statistics page, or go to the settings page.
 
 \begin{figure}[H]
     \begin{minipage}[b]{0.48\textwidth}
@@ -745,15 +707,9 @@ user-friendly and integrated browsing experience.
         \label{fig:use_case_settings}
     \end{minipage}
 \end{figure}
-Figure~\ref{fig:use_case_game_selection} illustrates the available games that
-players can choose from. Players can select one of four games: Aim Trainer,
-Math Game, Pair Up, or Sudoku. This selection allows users to navigate to
-a game page based on their preferences.
+Figure~\ref{fig:use_case_game_selection} shows the use case of selecting a game from our game selection page. The user can choose to play the following games: Aim Trainer, Math Game, Pair Up, and Sudoku.
 
-Figure~\ref{fig:use_case_settings} shows the settings available to
-authenticated players. Users can choose to make their high scores public
-or keep them private. This feature provides control over personal game
-performance visibility, enhancing user privacy options.
+Figure~\ref{fig:use_case_settings} shows how authenticated players can interact with the settings components. They can modify their high score visibility by either setting it to public or setting it to private. Public scores can be viewed by all players on the leaderboard, while private ones are hidden.
 
 
 \section{Traceability}
